VectorSum/VectorSum/bin/Debug/net8.0/buildLog_Intel(R)_Iris(R)_Xe_Graphics.txt
1:3:23: error: expected ';' after expression
    C[i] = A[i] + B[i]
                      ^
                      ;
